Fix execution counts in Jupyter notebooks for consistent cell execution order

--- a/case_studies/hospital_anomalies/notebooks/02_baseline_model.ipynb
+++ b/case_studies/hospital_anomalies/notebooks/02_baseline_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,357 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "date",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "region",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "hospital_id",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "admissions",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "year",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "month",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "day",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "day_of_week",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "day_of_year",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "quarter",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "week_of_year",
+         "rawType": "UInt32",
+         "type": "integer"
+        },
+        {
+         "name": "month_sin",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "month_cos",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "dow_sin",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "dow_cos",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_mean_7",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_std_7",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_min_7",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_max_7",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_mean_14",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_std_14",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_min_14",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_max_14",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_mean_30",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_std_30",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_min_30",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_rolling_max_30",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_lag_1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_lag_7",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_lag_30",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_diff_1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "admissions_pct_change_1",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "0961aa5c-d035-400b-9327-119bc05edcf7",
+       "rows": [
+        [
+         "0",
+         "2019-01-01 00:00:00",
+         "BC",
+         "H006",
+         "55",
+         "2019",
+         "1",
+         "1",
+         "1",
+         "1",
+         "1",
+         "1",
+         "0.49999999999999994",
+         "0.8660254037844387",
+         "0.7818314824680298",
+         "0.6234898018587336",
+         "55.0",
+         null,
+         "55.0",
+         "55.0",
+         "55.0",
+         null,
+         "55.0",
+         "55.0",
+         "55.0",
+         null,
+         "55.0",
+         "55.0",
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "1",
+         "2019-01-02 00:00:00",
+         "Alberta",
+         "H009",
+         "46",
+         "2019",
+         "1",
+         "2",
+         "2",
+         "2",
+         "1",
+         "1",
+         "0.49999999999999994",
+         "0.8660254037844387",
+         "0.9749279121818236",
+         "-0.22252093395631434",
+         "50.5",
+         "6.363961030678928",
+         "46.0",
+         "55.0",
+         "50.5",
+         "6.363961030678928",
+         "46.0",
+         "55.0",
+         "50.5",
+         "6.363961030678928",
+         "46.0",
+         "55.0",
+         "55.0",
+         null,
+         null,
+         "-9.0",
+         "-0.1636363636363637"
+        ],
+        [
+         "2",
+         "2019-01-03 00:00:00",
+         "Ontario",
+         "H002",
+         "57",
+         "2019",
+         "1",
+         "3",
+         "3",
+         "3",
+         "1",
+         "1",
+         "0.49999999999999994",
+         "0.8660254037844387",
+         "0.43388373911755823",
+         "-0.900968867902419",
+         "52.666666666666664",
+         "5.859465277082316",
+         "46.0",
+         "57.0",
+         "52.666666666666664",
+         "5.859465277082316",
+         "46.0",
+         "57.0",
+         "52.666666666666664",
+         "5.859465277082316",
+         "46.0",
+         "57.0",
+         "46.0",
+         null,
+         null,
+         "11.0",
+         "0.23913043478260865"
+        ],
+        [
+         "3",
+         "2019-01-04 00:00:00",
+         "BC",
+         "H012",
+         "49",
+         "2019",
+         "1",
+         "4",
+         "4",
+         "4",
+         "1",
+         "1",
+         "0.49999999999999994",
+         "0.8660254037844387",
+         "-0.433883739117558",
+         "-0.9009688679024191",
+         "51.75",
+         "5.1234753829798",
+         "46.0",
+         "57.0",
+         "51.75",
+         "5.1234753829798",
+         "46.0",
+         "57.0",
+         "51.75",
+         "5.1234753829798",
+         "46.0",
+         "57.0",
+         "57.0",
+         null,
+         null,
+         "-8.0",
+         "-0.14035087719298245"
+        ],
+        [
+         "4",
+         "2019-01-05 00:00:00",
+         "BC",
+         "H003",
+         "52",
+         "2019",
+         "1",
+         "5",
+         "5",
+         "5",
+         "1",
+         "1",
+         "0.49999999999999994",
+         "0.8660254037844387",
+         "-0.9749279121818236",
+         "-0.2225209339563146",
+         "51.8",
+         "4.43846820423443",
+         "46.0",
+         "57.0",
+         "51.8",
+         "4.43846820423443",
+         "46.0",
+         "57.0",
+         "51.8",
+         "4.43846820423443",
+         "46.0",
+         "57.0",
+         "49.0",
+         null,
+         null,
+         "3.0",
+         "0.061224489795918435"
+        ]
+       ],
+       "shape": {
+        "columns": 32,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -306,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -413,11 +764,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "date",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "admissions",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "anomaly_score",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "4833cfc4-2f07-45f9-849a-7a802a073bca",
+       "rows": [
+        [
+         "754",
+         "2021-01-24 00:00:00",
+         "113",
+         "-0.6441003904716199"
+        ],
+        [
+         "846",
+         "2021-04-26 00:00:00",
+         "132",
+         "-0.6368156991122625"
+        ],
+        [
+         "847",
+         "2021-04-27 00:00:00",
+         "73",
+         "-0.6214445715375726"
+        ],
+        [
+         "755",
+         "2021-01-25 00:00:00",
+         "64",
+         "-0.6135263168423616"
+        ],
+        [
+         "1409",
+         "2022-11-10 00:00:00",
+         "81",
+         "-0.6101229929263354"
+        ],
+        [
+         "466",
+         "2020-04-11 00:00:00",
+         "112",
+         "-0.6000866104948573"
+        ],
+        [
+         "1487",
+         "2023-01-27 00:00:00",
+         "57",
+         "-0.5970223452194005"
+        ],
+        [
+         "467",
+         "2020-04-12 00:00:00",
+         "73",
+         "-0.5938576679512533"
+        ],
+        [
+         "848",
+         "2021-04-28 00:00:00",
+         "77",
+         "-0.5926922661991503"
+        ],
+        [
+         "476",
+         "2020-04-21 00:00:00",
+         "67",
+         "-0.589141877847109"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 10
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
