Add optional date range override to run_pipeline function
- Updated the run_pipeline function to accept an optional date_range_override argument.
- If provided, this argument allows for dynamic adjustment of the date range used in the pipeline.
- Added logging to indicate when the date range has been overridden.

--- a/case_studies/hospital_anomalies/notebooks/01_ingest_and_qc.ipynb
+++ b/case_studies/hospital_anomalies/notebooks/01_ingest_and_qc.ipynb
@@ -31,7 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Load Configuration"
+    "## 1. Load Configuration\n",
+    "Load the base YAML config, then (optionally) override the active date range in the following cell without touching the file on disk."
    ]
   },
   {
@@ -43,8 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datasets to ingest: ['cihi_hospital_admissions', 'cihi_bed_occupancy', 'cihi_icu_utilization']\n",
-      "Date range: {'start': '2019-01-01', 'end': '2023-12-31'}\n"
+      "Datasets to ingest: ['cihi_hospital_admissions', 'cihi_bed_occupancy', 'cihi_icu_utilization']\n"
      ]
     }
    ],
@@ -53,8 +53,52 @@
     "config = load_config(config_path)\n",
     "config_dict = config.to_dict()\n",
     "\n",
-    "print(f\"Datasets to ingest: {config_dict['datasets']}\")\n",
-    "print(f\"Date range: {config_dict['date_range']}\")"
+    "print(f\"Datasets to ingest: {config_dict['datasets']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional: Override the analysis date range\n",
+    "Set either value below (or compute them programmatically) to override the `date_range` section from the YAML configuration without editing the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using date range from configuration file.\n",
+      "Active date range: {'start': '2015-01-01', 'end': '2026-12-31'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set to ISO strings (YYYY-MM-DD) or leave as None to keep the config values\n",
+    "START_DATE_OVERRIDE = None\n",
+    "END_DATE_OVERRIDE = None\n",
+    "\n",
+    "config_dict.setdefault('date_range', {})\n",
+    "\n",
+    "if START_DATE_OVERRIDE or END_DATE_OVERRIDE:\n",
+    "    start = pd.to_datetime(START_DATE_OVERRIDE).date() if START_DATE_OVERRIDE else None\n",
+    "    end = pd.to_datetime(END_DATE_OVERRIDE).date() if END_DATE_OVERRIDE else None\n",
+    "    if start and end and start > end:\n",
+    "        raise ValueError(\"START_DATE_OVERRIDE must be on or before END_DATE_OVERRIDE.\")\n",
+    "    if start:\n",
+    "        config_dict['date_range']['start'] = start.isoformat()\n",
+    "    if end:\n",
+    "        config_dict['date_range']['end'] = end.isoformat()\n",
+    "    print(\"Applied notebook-level date range override.\")\n",
+    "else:\n",
+    "    print(\"Using date range from configuration file.\")\n",
+    "\n",
+    "print(f\"Active date range: {config_dict.get('date_range', {})}\")"
    ]
   },
   {
@@ -66,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -376,9 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Data starts later than expected\n",
+      "Data ends earlier than expected\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Data starts later than expected\n",
+      "Data ends earlier than expected\n",
+      "Data starts later than expected\n",
+      "Data ends earlier than expected\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -404,11 +466,11 @@
    "source": [
     "qc_results = run_qc_checks(datasets, config_dict)\n",
     "\n",
-    "for dataset_id, results in qc_results.items():\n",
+    "for dataset_id, results in qc_results['datasets'].items():\n",
     "    print(f\"\\n=== {dataset_id} ===\")\n",
     "    print(f\"Row count: {results['row_count']}\")\n",
     "    print(f\"Column count: {results['column_count']}\")\n",
-    "    print(f\"Missing data: {results['missing_data']}\")"
+    "    print(f\"Missing data: {results['checks']['missingness']['ratios']}\")"
    ]
   },
   {
@@ -420,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.1)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
